[gd_scene load_steps=2 format=3 uid="uid://cd0y087oaaxj8"]

[ext_resource type="Script" uid="uid://bukaxb434ull2" path="res://Editor/Scenes/ControlPanel/status_bar.gd" id="1_gl4rx"]

[node name="StatusBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 25)
script = ExtResource("1_gl4rx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Ready"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="ProjectLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Project: Untitled"
